[workspace]
resolver = "2"
members = [
    "narwhal/config",
    "narwhal/consensus",
    "narwhal/crypto",
    "narwhal/dag",
    "narwhal/examples",
    "narwhal/executor",
    "narwhal/network",
    "narwhal/node",
    "narwhal/primary",
    "narwhal/storage",
    "narwhal/test-utils",
    "narwhal/types",
    "narwhal/worker",
]

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, and sui crates
version = "0.16.0"

[profile.release]
# The following two lines add minimal symbol information, which helps certain profilers like Bytehound
# without significantly increasing binary size
debug = true
strip = 'debuginfo'

[profile.bench]
# Do not strip any debug info.  This helps the widest set of profiling tools
debug = true
strip = 'none'

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "12c522bea01e4a3d19ecae63d789edcdcce2d66c" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "12c522bea01e4a3d19ecae63d789edcdcce2d66c", package = "fastcrypto-zkp" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "87d60b249a9954775a95790e3bc9ca1a0df7969f" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "87d60b249a9954775a95790e3bc9ca1a0df7969f" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "87d60b249a9954775a95790e3bc9ca1a0df7969f" }

# Use the same workspace-hack across crates.
workspace-hack = { path = "crates/workspace-hack" }

mysten-network = { path = "crates/mysten-network" }
telemetry-subscribers = { path = "crates/telemetry-subscribers" }
mysten-util-mem = { path = "crates/mysten-util-mem" }
typed-store = { path = "crates/typed-store" }
typed-store-derive = { path = "crates/typed-store-derive" }
